--- a/pass-client-integration/pom.xml
+++ b/pass-client-integration/pom.xml
@@ -19,8 +19,9 @@
     <profile>
       <id>local-context</id>
       <activation>
-      
-        <!-- TODO:  This is a workaround until the online context is updated, published, and dockerized -->
+
+        <!-- TODO: This is a workaround until the online context is updated, 
+          published, and dockerized -->
         <property>
           <name>!online</name>
         </property>
@@ -136,6 +137,12 @@
     <dependency>
       <groupId>org.dataconservancy.pass</groupId>
       <artifactId>pass-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.dataconservancy.pass</groupId>
+      <artifactId>pass-model-nihms</artifactId>
       <version>${project.version}</version>
     </dependency>
 
