--- a/pass-client-shaded-v2_3/pom.xml
+++ b/pass-client-shaded-v2_3/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>pass-client</artifactId>
     <version>0.4.0-SNAPSHOT</version>
   </parent>
-  <artifactId>pass-client-shaded</artifactId>
+  <artifactId>pass-client-shaded-v2_3</artifactId>
   <packaging>jar</packaging>
   <build>
     <plugins>
@@ -21,8 +21,6 @@
               <goal>shade</goal>
             </goals>
             <configuration>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>v2_3</shadedClassifierName>
               <relocations>
                 <relocation>
                   <shadedPattern>org.dataconservancy.pass.v2_3</shadedPattern>
