--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
     <maven-failsafe-plugin.version>2.21.0</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-javadoc-pugin.version>3.0.1</maven-javadoc-pugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
     <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
     <maven.deploy.plugin.version>2.8.2</maven.deploy.plugin.version>
@@ -245,6 +246,16 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>${maven-release-plugin.version}</version>
+          <configuration>
+            <preparationGoals>clean install</preparationGoals>
+            <releaseProfiles>release</releaseProfiles>
+          </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
           <version>${maven-failsafe-plugin.version}</version>
         </plugin>
@@ -265,20 +276,7 @@
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-scm-publish-plugin</artifactId>
-        <version>1.1</version>
-        <configuration>
-          <pubScmUrl>scm:git:https://github.com/OA-PASS/java-fedora-client.git</pubScmUrl>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <preparationGoals>clean install</preparationGoals>
-          <releaseProfiles>release</releaseProfiles>
-        </configuration>
       </plugin>
 
     </plugins>
@@ -444,7 +442,7 @@
     </snapshotRepository>
 
   </distributionManagement>
-  
+
   <repositories>
     <repository>
       <id>oss</id>
@@ -469,7 +467,7 @@
       </snapshots>
     </repository>
   </repositories>
-  
+
 
   <scm>
     <connection>scm:git:https://github.com/OA-PASS/java-fedora-client.git</connection>
